<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_view_modules"
            android:icon="@drawable/ic_view_modules"
            android:title="@string/nav_view_modules" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"
            android:title="Chats" />
        <item
            android:id="@+id/nav_FAQs"
            android:icon="@drawable/ic_faq"
            android:title="FAQs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>